--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>config-server</module>
         <module>discovery-service</module>
         <module>api-gateway</module>
-        <module>config-server</module>
         <module>account-management-bounded-context</module>
         <module>cineclub-administration-bounded-context</module>
         <module>showtime-management-bounded-context</module>
@@ -31,5 +31,20 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
