--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=api-gateway
 server.port=8080
 
 #Eureka client
-#eureka.client.service-url.default-zone=http://localhost:8761/eureka
-eureka.client.service-url.default-zone=http://discovery:8761/eureka
+#eureka.client.service-url.default-zone=http://discovery:8761/eureka
+eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER:http://discovery:8761/eureka}
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 #Cineclub Administration Service routes
