--- a/cineclub-administration-bounded-context/src/main/resources/application.properties
+++ b/cineclub-administration-bounded-context/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 
 spring.cloud.config.name=cineclub-administration-bounded-context
-spring.config.import=optional:configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://config:8888
+#spring.config.import=optional:configserver:http://localhost:8888
 spring.cloud.config.enabled=true
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 spring.datasource.username=root
 spring.datasource.password=12345
