--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=config-server
 server.port=8888
 spring.cloud.config.server.git.uri=https://github.com/SW72-TuCine/service-configuration
 spring.cloud.config.server.git.clone-on-start=true
-spring.profiles.active=native
+#spring.profiles.active=native
 spring.cloud.config.server.git.search-paths={application}
 
 spring.cloud.config.server.native.search-locations=.
