--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
     <modules>
         <module>config-server</module>
-        <module>discovery-service</module>
+        <module>discovery</module>
         <module>api-gateway</module>
         <module>account-management-bounded-context</module>
         <module>cineclub-administration-bounded-context</module>
