--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,16 @@
 version: '3'
 services:
+
+  cineclubadministration-db:
+    image: mysql:latest
+    environment:
+      MYSQL_ROOT_PASSWORD: 12345
+      MYSQL_DATABASE: cineclubadministration
+      MYSQL_USER: root
+      MYSQL_PASSWORD: 12345
+    ports:
+        - 3306:3306
+
   discovery:
     image: discovery-service:latest
     ports:
