--- a/discovery/src/main/resources/application.properties
+++ b/discovery/src/main/resources/application.properties
@@ -8,4 +8,5 @@ server.port=8761
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
 #eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
