--- a/account-management-bounded-context/src/main/resources/application.properties
+++ b/account-management-bounded-context/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 spring.cloud.config.name=account-managment-bounded-context
-spring.config.import=optional:configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://config:8888
 spring.cloud.config.enabled=true
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 spring.datasource.username=root
 spring.datasource.password=12345
