--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,8 @@ services:
     depends_on:
       - discovery
       - config
-
+    ports:
+      - 8082:8082
   cineclub-administration-service:
     image: cineclub-service:latest
     environment:
