--- a/reservation-purchase-bounded-context/src/main/resources/application.properties
+++ b/reservation-purchase-bounded-context/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 spring.cloud.config.name=reservation-purchase-bounded-context
-spring.config.import=optional:configserver:http://localhost:8888
+spring.config.import=optional:configserver:http://config:8888
 spring.cloud.config.enabled=true
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 # spring.datasource.url=jdbc:mysql://localhost:3306/lc?useSSL=false&serverTimeZone=UTC&useLegacyDateTimeCode=false
 spring.datasource.username=root
